# furigana4epub

./: .gitignore  LICENSE  README.md  furigana4epub.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  yomituki.py
.github/workflows/: codeql-analysis.yml  release.yml
furigana4epub/: furigana4epub.py  version.py  yomituki.py
