[metadata]
name = furigana4epub
description = A Python script to adding/removing furigana for Japanese epub books.
keywords = Japanese, readings, epub, furigana
url = https://github.com/Mumumu4/furigana4epub
author = Mumumu
author_email = 30195921+Mumumu4@users.noreply.github.com
license = MIT
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
	License :: OSI Approved :: MIT License
	Natural Language :: Japanese
	Topic :: Text Processing :: Linguistic
	Environment :: Console

[options]
packages = find:
python_requires=>=3.6, <4
install_requires=
	lxml
	fugashi
	unidic_lite
	beautifulsoup4>=4.9.1

[options.entry_points]
console_scripts =
    furigana4epub = furigana4epub.furigana4epub:main
